human-in-the-loop

--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 106,
+      "execution_count": null,
       "id": "1628b94f",
       "metadata": {},
       "outputs": [],
@@ -14,6 +14,7 @@
         "from langgraph.prebuilt import ToolNode, tools_condition\n",
         "from langchain_core.tools import tool\n",
         "from langgraph.checkpoint.sqlite import SqliteSaver\n",
+        "from langgraph.types import interrupt, Command\n",
         "import dotenv\n",
         "\n",
         "dotenv.load_dotenv()\n",
@@ -23,12 +24,18 @@
         "conn = sqlite3.connect(\n",
         "    \"memory.db\",\n",
         "    check_same_thread=False,\n",
-        ")"
+        ")\n",
+        "\n",
+        "config = {\n",
+        "    \"configurable\" : {\n",
+        "        \"thread_id\": \"3\"\n",
+        "    }\n",
+        "}"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 107,
+      "execution_count": null,
       "id": "2a6196f7",
       "metadata": {},
       "outputs": [],
@@ -41,28 +48,41 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 108,
+      "execution_count": null,
       "id": "0188b6e5",
       "metadata": {},
       "outputs": [],
       "source": [
         "@tool\n",
-        "def get_weather(city: str):\n",
-        "    \"\"\"Gets weather in city\"\"\"\n",
-        "    return f\"The weather in {city} is sunny\"\n",
+        "def get_human_feedback(poem: str):\n",
+        "    \"\"\"\n",
+        "    Asks the user for feedback on the poem.\n",
+        "    Use this before returning the final response.\n",
+        "    \"\"\"\n",
+        "    feedback = interrupt(f\"Here is the poem, tell me what you think\\n{poem}\")\n",
+        "    return feedback\n",
         "\n",
-        "tools = [get_weather]\n",
+        "tools = [get_human_feedback]\n",
         "tools_by_name = {tool.name : tool for tool in tools}\n",
         "llm_with_tools = llm.bind_tools(tools=tools)\n",
         "\n",
         "def chatbot(state: State):\n",
-        "    response = llm_with_tools.invoke(state[\"messages\"])\n",
+        "    response = llm_with_tools.invoke(\n",
+        "        f\"\"\"\n",
+        "        You are an expert in maiking poems.\n",
+        "        User the `get_human_feedback` tool to get feedback on your poem.\n",
+        "        Only after you receive positive feedvack you can return the final poem.\n",
+        "        ALWAYS ASK FOR FEEDBACK FIRST.\n",
+        "        Here is  the conversation history:\n",
+        "        {state[\"messages\"]}\n",
+        "        \"\"\"\n",
+        "    )\n",
         "    return {\"messages\":[response]}\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 109,
+      "execution_count": null,
       "id": "f9c90e12",
       "metadata": {},
       "outputs": [],
@@ -97,22 +117,7 @@
       "execution_count": null,
       "id": "97322cc8",
       "metadata": {},
-      "outputs": [
-        {
-          "ename": "NotImplementedError",
-          "evalue": "The SqliteSaver does not support async methods. Consider using AsyncSqliteSaver instead.\nfrom langgraph.checkpoint.sqlite.aio import AsyncSqliteSaver\nNote: AsyncSqliteSaver requires the aiosqlite package to use.\nInstall with:\n`pip install aiosqlite`\nSee https://langchain-ai.github.io/langgraph/reference/checkpoints/#langgraph.checkpoint.sqlite.aio.AsyncSqliteSaverfor more information.",
-          "output_type": "error",
-          "traceback": [
-            "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-            "\u001b[31mNotImplementedError\u001b[39m                       Traceback (most recent call last)",
-            "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[110]\u001b[39m\u001b[32m, line 17\u001b[39m\n\u001b[32m     11\u001b[39m graph = graph_builder.compile(\n\u001b[32m     12\u001b[39m     checkpointer=SqliteSaver(conn)\n\u001b[32m     13\u001b[39m )\n\u001b[32m     15\u001b[39m \u001b[38;5;28mid\u001b[39m = \u001b[33m\"\u001b[39m\u001b[33madmin\u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m---> \u001b[39m\u001b[32m17\u001b[39m \u001b[38;5;28;01masync\u001b[39;00m \u001b[38;5;28;01mfor\u001b[39;00m event \u001b[38;5;129;01min\u001b[39;00m graph.astream(\n\u001b[32m     18\u001b[39m     {\n\u001b[32m     19\u001b[39m         \u001b[33m\"\u001b[39m\u001b[33mmessages\u001b[39m\u001b[33m\"\u001b[39m:[\n\u001b[32m     20\u001b[39m             {\u001b[33m\"\u001b[39m\u001b[33mrole\u001b[39m\u001b[33m\"\u001b[39m:\u001b[33m\"\u001b[39m\u001b[33muser\u001b[39m\u001b[33m\"\u001b[39m, \u001b[33m\"\u001b[39m\u001b[33mcontent\u001b[39m\u001b[33m\"\u001b[39m:\u001b[33m\"\u001b[39m\u001b[33mwhat is the weather in machupichu\u001b[39m\u001b[33m\"\u001b[39m}\n\u001b[32m     21\u001b[39m         ]\n\u001b[32m     22\u001b[39m     },\n\u001b[32m     23\u001b[39m     stream_mode=\u001b[33m\"\u001b[39m\u001b[33mupdates\u001b[39m\u001b[33m\"\u001b[39m,\n\u001b[32m     24\u001b[39m     config={\n\u001b[32m     25\u001b[39m         \u001b[33m\"\u001b[39m\u001b[33mconfigurable\u001b[39m\u001b[33m\"\u001b[39m:{\n\u001b[32m     26\u001b[39m             \u001b[33m\"\u001b[39m\u001b[33mthread_id\u001b[39m\u001b[33m\"\u001b[39m:\u001b[33m\"\u001b[39m\u001b[33m2\u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m     27\u001b[39m         }\n\u001b[32m     28\u001b[39m     }\n\u001b[32m     29\u001b[39m \n\u001b[32m     30\u001b[39m ):\n\u001b[32m     31\u001b[39m     \u001b[38;5;28mprint\u001b[39m(event)\n",
-            "\u001b[36mFile \u001b[39m\u001b[32m~/Documents/Obsidian Vault/Project/AI Agent/course/hello-langgraph/.venv/lib/python3.13/site-packages/langgraph/pregel/main.py:2883\u001b[39m, in \u001b[36mPregel.astream\u001b[39m\u001b[34m(self, input, config, context, stream_mode, print_mode, output_keys, interrupt_before, interrupt_after, durability, subgraphs, debug, **kwargs)\u001b[39m\n\u001b[32m   2880\u001b[39m runtime = parent_runtime.merge(runtime)\n\u001b[32m   2881\u001b[39m config[CONF][CONFIG_KEY_RUNTIME] = runtime\n\u001b[32m-> \u001b[39m\u001b[32m2883\u001b[39m \u001b[38;5;28;01masync\u001b[39;00m \u001b[38;5;28;01mwith\u001b[39;00m AsyncPregelLoop(\n\u001b[32m   2884\u001b[39m     \u001b[38;5;28minput\u001b[39m,\n\u001b[32m   2885\u001b[39m     stream=StreamProtocol(stream.put_nowait, stream_modes),\n\u001b[32m   2886\u001b[39m     config=config,\n\u001b[32m   2887\u001b[39m     store=store,\n\u001b[32m   2888\u001b[39m     cache=cache,\n\u001b[32m   2889\u001b[39m     checkpointer=checkpointer,\n\u001b[32m   2890\u001b[39m     nodes=\u001b[38;5;28mself\u001b[39m.nodes,\n\u001b[32m   2891\u001b[39m     specs=\u001b[38;5;28mself\u001b[39m.channels,\n\u001b[32m   2892\u001b[39m     output_keys=output_keys,\n\u001b[32m   2893\u001b[39m     input_keys=\u001b[38;5;28mself\u001b[39m.input_channels,\n\u001b[32m   2894\u001b[39m     stream_keys=\u001b[38;5;28mself\u001b[39m.stream_channels_asis,\n\u001b[32m   2895\u001b[39m     interrupt_before=interrupt_before_,\n\u001b[32m   2896\u001b[39m     interrupt_after=interrupt_after_,\n\u001b[32m   2897\u001b[39m     manager=run_manager,\n\u001b[32m   2898\u001b[39m     durability=durability_,\n\u001b[32m   2899\u001b[39m     trigger_to_nodes=\u001b[38;5;28mself\u001b[39m.trigger_to_nodes,\n\u001b[32m   2900\u001b[39m     migrate_checkpoint=\u001b[38;5;28mself\u001b[39m._migrate_checkpoint,\n\u001b[32m   2901\u001b[39m     retry_policy=\u001b[38;5;28mself\u001b[39m.retry_policy,\n\u001b[32m   2902\u001b[39m     cache_policy=\u001b[38;5;28mself\u001b[39m.cache_policy,\n\u001b[32m   2903\u001b[39m ) \u001b[38;5;28;01mas\u001b[39;00m loop:\n\u001b[32m   2904\u001b[39m     \u001b[38;5;66;03m# create runner\u001b[39;00m\n\u001b[32m   2905\u001b[39m     runner = PregelRunner(\n\u001b[32m   2906\u001b[39m         submit=config[CONF].get(\n\u001b[32m   2907\u001b[39m             CONFIG_KEY_RUNNER_SUBMIT, weakref.WeakMethod(loop.submit)\n\u001b[32m   (...)\u001b[39m\u001b[32m   2911\u001b[39m         node_finished=config[CONF].get(CONFIG_KEY_NODE_FINISHED),\n\u001b[32m   2912\u001b[39m     )\n\u001b[32m   2913\u001b[39m     \u001b[38;5;66;03m# enable subgraph streaming\u001b[39;00m\n",
-            "\u001b[36mFile \u001b[39m\u001b[32m~/Documents/Obsidian Vault/Project/AI Agent/course/hello-langgraph/.venv/lib/python3.13/site-packages/langgraph/pregel/_loop.py:1186\u001b[39m, in \u001b[36mAsyncPregelLoop.__aenter__\u001b[39m\u001b[34m(self)\u001b[39m\n\u001b[32m   1184\u001b[39m \u001b[38;5;28;01masync\u001b[39;00m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34m__aenter__\u001b[39m(\u001b[38;5;28mself\u001b[39m) -> Self:\n\u001b[32m   1185\u001b[39m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m.checkpointer:\n\u001b[32m-> \u001b[39m\u001b[32m1186\u001b[39m         saved = \u001b[38;5;28;01mawait\u001b[39;00m \u001b[38;5;28mself\u001b[39m.checkpointer.aget_tuple(\u001b[38;5;28mself\u001b[39m.checkpoint_config)\n\u001b[32m   1187\u001b[39m     \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[32m   1188\u001b[39m         saved = \u001b[38;5;28;01mNone\u001b[39;00m\n",
-            "\u001b[36mFile \u001b[39m\u001b[32m~/Documents/Obsidian Vault/Project/AI Agent/course/hello-langgraph/.venv/lib/python3.13/site-packages/langgraph/checkpoint/sqlite/__init__.py:505\u001b[39m, in \u001b[36mSqliteSaver.aget_tuple\u001b[39m\u001b[34m(self, config)\u001b[39m\n\u001b[32m    498\u001b[39m \u001b[38;5;28;01masync\u001b[39;00m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34maget_tuple\u001b[39m(\u001b[38;5;28mself\u001b[39m, config: RunnableConfig) -> CheckpointTuple | \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[32m    499\u001b[39m \u001b[38;5;250m    \u001b[39m\u001b[33;03m\"\"\"Get a checkpoint tuple from the database asynchronously.\u001b[39;00m\n\u001b[32m    500\u001b[39m \n\u001b[32m    501\u001b[39m \u001b[33;03m    Note:\u001b[39;00m\n\u001b[32m    502\u001b[39m \u001b[33;03m        This async method is not supported by the SqliteSaver class.\u001b[39;00m\n\u001b[32m    503\u001b[39m \u001b[33;03m        Use get_tuple() instead, or consider using [AsyncSqliteSaver][langgraph.checkpoint.sqlite.aio.AsyncSqliteSaver].\u001b[39;00m\n\u001b[32m    504\u001b[39m \u001b[33;03m    \"\"\"\u001b[39;00m\n\u001b[32m--> \u001b[39m\u001b[32m505\u001b[39m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mNotImplementedError\u001b[39;00m(_AIO_ERROR_MSG)\n",
-            "\u001b[31mNotImplementedError\u001b[39m: The SqliteSaver does not support async methods. Consider using AsyncSqliteSaver instead.\nfrom langgraph.checkpoint.sqlite.aio import AsyncSqliteSaver\nNote: AsyncSqliteSaver requires the aiosqlite package to use.\nInstall with:\n`pip install aiosqlite`\nSee https://langchain-ai.github.io/langgraph/reference/checkpoints/#langgraph.checkpoint.sqlite.aio.AsyncSqliteSaverfor more information."
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "from subprocess import check_output\n",
         "\n",
@@ -127,18 +132,7 @@
         "graph = graph_builder.compile(\n",
         "    checkpointer=SqliteSaver(conn)\n",
         ")\n",
-        "\n",
-        "id = \"admin\"\n",
-        "\n",
-        "async for event in graph.astream(\n",
-        "    {\n",
-        "        \"messages\":[\n",
-        "            {\"role\":\"user\", \"content\":\"what is the weather in machupichu\"}\n",
-        "        ]\n",
-        "    },\n",
-        "    stream_mode=\"updates\",\n",
-        "):\n",
-        "    print(event)\n"
+        "\n"
       ]
     },
     {
@@ -148,15 +142,97 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "for state in graph.get_state_history(\n",
+        "result = graph.invoke(\n",
         "    {\n",
-        "        \"configurable\": {\n",
-        "            \"thread_id\" : \"2\"\n",
-        "        }\n",
-        "    }\n",
-        "):\n",
-        "    print(state)"
+        "        \"messages\" : [\n",
+        "            {\"role\":\"user\", \"content\":\"Please make a poem about Python code.\"}\n",
+        "        ]\n",
+        "    },\n",
+        "    config = config,\n",
+        ")"
       ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "029120a0",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "for message in result[\"messages\"]:\n",
+        "    message.pretty_print()"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "b8fa086f",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "snapshot = graph.get_state(config)\n",
+        "snapshot.next"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "f7a71859",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "response = Command(resume=\"It's too long!\")\n",
+        "\n",
+        "result = graph.invoke(response, config=config)\n",
+        "\n",
+        "for message in result[\"messages\"]:\n",
+        "    message.pretty_print()"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "998c3df7",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "snapshot = graph.get_state(config)\n",
+        "snapshot.next"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "e9c21406",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "response = Command(resume=\"It's good!\")\n",
+        "\n",
+        "result = graph.invoke(response, config=config)\n",
+        "\n",
+        "for message in result[\"messages\"]:\n",
+        "    message.pretty_print()"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "1af07137",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "snapshot = graph.get_state(config)\n",
+        "snapshot.next"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "e280d851",
+      "metadata": {},
+      "outputs": [],
+      "source": []
     }
   ],
   "metadata": {
