--- a/main.ipynb
+++ b/main.ipynb
@@ -2,21 +2,15 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": null,
-      "id": "1628b94f",
       "metadata": {},
-      "outputs": [],
       "source": [
         "import sqlite3\n",
         "from langgraph.graph import StateGraph, START, END\n",
         "from langchain.chat_models import init_chat_model\n",
         "from langgraph.graph.message import MessagesState\n",
-        "from langgraph.prebuilt import ToolNode, tools_condition\n",
-        "from langchain_core.tools import tool\n",
         "from langgraph.checkpoint.sqlite import SqliteSaver\n",
-        "from langgraph.types import interrupt, Command\n",
-        "import dotenv\n",
         "\n",
+        "import dotenv\n",
         "dotenv.load_dotenv()\n",
         "\n",
         "llm = init_chat_model(\"openai:gpt-4o-mini\")\n",
@@ -28,211 +22,210 @@
         "\n",
         "config = {\n",
         "    \"configurable\" : {\n",
-        "        \"thread_id\": \"3\"\n",
+        "        \"thread_id\": \"0_x\"\n",
         "    }\n",
         "}"
-      ]
+      ],
+      "execution_count": 160,
+      "outputs": [],
+      "id": "1628b94f"
     },
     {
       "cell_type": "code",
-      "execution_count": null,
-      "id": "2a6196f7",
       "metadata": {},
-      "outputs": [],
       "source": [
         "class State(MessagesState):\n",
-        "    custom_stuff : str\n",
+        "    pass\n",
         "\n",
         "graph_builder = StateGraph(State)"
-      ]
+      ],
+      "execution_count": 161,
+      "outputs": [],
+      "id": "2a6196f7"
     },
     {
       "cell_type": "code",
-      "execution_count": null,
-      "id": "0188b6e5",
       "metadata": {},
-      "outputs": [],
       "source": [
-        "@tool\n",
-        "def get_human_feedback(poem: str):\n",
-        "    \"\"\"\n",
-        "    Asks the user for feedback on the poem.\n",
-        "    Use this before returning the final response.\n",
-        "    \"\"\"\n",
-        "    feedback = interrupt(f\"Here is the poem, tell me what you think\\n{poem}\")\n",
-        "    return feedback\n",
-        "\n",
-        "tools = [get_human_feedback]\n",
-        "tools_by_name = {tool.name : tool for tool in tools}\n",
-        "llm_with_tools = llm.bind_tools(tools=tools)\n",
         "\n",
         "def chatbot(state: State):\n",
-        "    response = llm_with_tools.invoke(\n",
-        "        f\"\"\"\n",
-        "        You are an expert in maiking poems.\n",
-        "        User the `get_human_feedback` tool to get feedback on your poem.\n",
-        "        Only after you receive positive feedvack you can return the final poem.\n",
-        "        ALWAYS ASK FOR FEEDBACK FIRST.\n",
-        "        Here is  the conversation history:\n",
-        "        {state[\"messages\"]}\n",
-        "        \"\"\"\n",
+        "    response = llm.invoke(\n",
+        "        state[\"messages\"]\n",
         "    )\n",
         "    return {\"messages\":[response]}\n"
-      ]
+      ],
+      "execution_count": 162,
+      "outputs": [],
+      "id": "0188b6e5"
     },
     {
       "cell_type": "code",
-      "execution_count": null,
-      "id": "f9c90e12",
       "metadata": {},
-      "outputs": [],
       "source": [
-        "from multiprocessing import context\n",
-        "from typing import Literal\n",
-        "from langchain_core.messages import ToolMessage\n",
-        "from langgraph.graph import StateGraph, START, END\n",
-        "\n",
-        "def tool_node(state: dict):\n",
-        "    result = []\n",
-        "    for tool_call in state[\"messages\"][-1].tool_calls:\n",
-        "        tool = tools_by_name[tool_call[\"name\"]]\n",
-        "        observation = tool.invoke(tool_call[\"args\"])\n",
-        "        result.append(ToolMessage(content=observation, tool_call_id=tool_call[\"id\"]))\n",
-        "\n",
-        "    return {\"messages\":result}\n",
-        "\n",
-        "def should_continue(state: MessagesState) -> Literal[\"tools\", END]:\n",
-        "\n",
-        "    messages = state[\"messages\"]\n",
-        "    last_message = messages[-1]\n",
-        "\n",
-        "    if last_message.tool_calls:\n",
-        "        return \"tools\"\n",
-        "    \n",
-        "    return END\n"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "id": "97322cc8",
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "from subprocess import check_output\n",
-        "\n",
         "\n",
         "graph_builder.add_node(\"chatbot\", chatbot)\n",
-        "graph_builder.add_node(\"tools\", tool_node)\n",
         "\n",
         "graph_builder.add_edge(START, \"chatbot\")\n",
-        "graph_builder.add_conditional_edges(\"chatbot\", should_continue, [\"tools\", END] )\n",
-        "graph_builder.add_edge(\"tools\", \"chatbot\")\n",
+        "graph_builder.add_edge(\"chatbot\", END)\n",
         "\n",
         "graph = graph_builder.compile(\n",
         "    checkpointer=SqliteSaver(conn)\n",
-        ")\n",
-        "\n"
-      ]
+        ")\n"
+      ],
+      "execution_count": 163,
+      "outputs": [],
+      "id": "97322cc8"
     },
     {
       "cell_type": "code",
-      "execution_count": null,
-      "id": "5c6d88b8",
       "metadata": {},
-      "outputs": [],
       "source": [
         "result = graph.invoke(\n",
         "    {\n",
         "        \"messages\" : [\n",
-        "            {\"role\":\"user\", \"content\":\"Please make a poem about Python code.\"}\n",
+        "            {\n",
+        "                \"role\":\"user\",\n",
+        "                \"content\":\"I live in Korea now. And the city I live in is Seoul.\",\n",
+        "            },\n",
         "        ]\n",
         "    },\n",
         "    config = config,\n",
         ")"
-      ]
+      ],
+      "execution_count": 164,
+      "outputs": [],
+      "id": "5c6d88b8"
     },
     {
       "cell_type": "code",
-      "execution_count": null,
-      "id": "029120a0",
       "metadata": {},
-      "outputs": [],
       "source": [
         "for message in result[\"messages\"]:\n",
         "    message.pretty_print()"
-      ]
+      ],
+      "execution_count": 165,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "================================\u001b[1m Human Message \u001b[0m=================================\n",
+            "\n",
+            "I live in Korea now. And the city I live in is Seoul.\n",
+            "==================================\u001b[1m Ai Message \u001b[0m==================================\n",
+            "\n",
+            "That's great! Seoul is a vibrant city with a rich history and a dynamic mix of modern and traditional culture. Whether you're interested in exploring historical sites like Gyeongbokgung Palace, enjoying the bustling atmosphere of Myeongdong, or experiencing the nightlife in Hongdae, there's always something to see and do. How are you finding life in Seoul so far?\n"
+          ]
+        }
+      ],
+      "id": "029120a0"
     },
     {
       "cell_type": "code",
-      "execution_count": null,
-      "id": "b8fa086f",
       "metadata": {},
-      "outputs": [],
       "source": [
-        "snapshot = graph.get_state(config)\n",
-        "snapshot.next"
-      ]
+        "state_history = graph.get_state_history(config)"
+      ],
+      "execution_count": 166,
+      "outputs": [],
+      "id": "e280d851"
     },
     {
       "cell_type": "code",
-      "execution_count": null,
-      "id": "f7a71859",
       "metadata": {},
-      "outputs": [],
       "source": [
-        "response = Command(resume=\"It's too long!\")\n",
+        "for state_snapshot in list(state_history):\n",
+        "    print(state_snapshot.next)\n",
+        "    print(state_snapshot.values[\"messages\"])\n",
+        "    print(\"=========\\n\")"
+      ],
+      "execution_count": 167,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "()\n",
+            "[HumanMessage(content='I live in Korea now. And the city I live in is Seoul.', additional_kwargs={}, response_metadata={}, id='49e28cc3-8b41-460c-afdb-b3f548459a29'), AIMessage(content=\"That's great! Seoul is a vibrant city with a rich history and a dynamic mix of modern and traditional culture. Whether you're interested in exploring historical sites like Gyeongbokgung Palace, enjoying the bustling atmosphere of Myeongdong, or experiencing the nightlife in Hongdae, there's always something to see and do. How are you finding life in Seoul so far?\", additional_kwargs={'refusal': None}, response_metadata={'token_usage': {'completion_tokens': 73, 'prompt_tokens': 22, 'total_tokens': 95, 'completion_tokens_details': {'accepted_prediction_tokens': 0, 'audio_tokens': 0, 'reasoning_tokens': 0, 'rejected_prediction_tokens': 0}, 'prompt_tokens_details': {'audio_tokens': 0, 'cached_tokens': 0}}, 'model_name': 'gpt-4o-mini-2024-07-18', 'system_fingerprint': 'fp_1590f93f9d', 'id': 'chatcmpl-D3FtUDQZAkM0oHzvHwIbQtpdoprog', 'service_tier': 'default', 'finish_reason': 'stop', 'logprobs': None}, id='run--019c0875-90cf-72c1-a1e4-b4bd28048739-0', usage_metadata={'input_tokens': 22, 'output_tokens': 73, 'total_tokens': 95, 'input_token_details': {'audio': 0, 'cache_read': 0}, 'output_token_details': {'audio': 0, 'reasoning': 0}})]\n",
+            "=========\n",
+            "\n",
+            "('chatbot',)\n",
+            "[HumanMessage(content='I live in Korea now. And the city I live in is Seoul.', additional_kwargs={}, response_metadata={}, id='49e28cc3-8b41-460c-afdb-b3f548459a29')]\n",
+            "=========\n",
+            "\n",
+            "('__start__',)\n",
+            "[]\n",
+            "=========\n",
+            "\n"
+          ]
+        }
+      ],
+      "id": "e0d51113"
+    },
+    {
+      "cell_type": "code",
+      "metadata": {},
+      "source": [
+        "state_history = graph.get_state_history(config)\n",
         "\n",
-        "result = graph.invoke(response, config=config)\n",
+        "to_fork = list(state_history)[-2]\n",
         "\n",
-        "for message in result[\"messages\"]:\n",
-        "    message.pretty_print()"
-      ]
+        "to_fork.config"
+      ],
+      "execution_count": 169,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "{'configurable': {'thread_id': '0_x',\n",
+              "  'checkpoint_ns': '',\n",
+              "  'checkpoint_id': '1f0fcdc8-3e9b-68f4-8000-4d2aa47fbdd7'}}"
+            ]
+          }
+        }
+      ],
+      "id": "d6a96e3f"
     },
     {
       "cell_type": "code",
-      "execution_count": null,
-      "id": "998c3df7",
       "metadata": {},
-      "outputs": [],
       "source": [
-        "snapshot = graph.get_state(config)\n",
-        "snapshot.next"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "id": "e9c21406",
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "response = Command(resume=\"It's good!\")\n",
+        "from langchain_core.messages import HumanMessage\n",
         "\n",
-        "result = graph.invoke(response, config=config)\n",
-        "\n",
-        "for message in result[\"messages\"]:\n",
-        "    message.pretty_print()"
-      ]
+        "graph.update_state(\n",
+        "    to_fork.config,\n",
+        "    {\n",
+        "        \"messages\" : [\n",
+        "            HumanMessage(\n",
+        "                content=\"I live in Korea now. And the city I live in is Busan.\",\n",
+        "                id=\"1f0fcdc8-3e9b-68f4-8000-4d2aa47fbdd7\",\n",
+        "            )\n",
+        "        ]\n",
+        "    }\n",
+        ")"
+      ],
+      "execution_count": 170,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "ImportError",
+          "evalue": "cannot import name 'MumanMessage' from 'langchain_core.messages' (/Users/askstoryteam/Documents/Obsidian Vault/Project/AI Agent/course/hello-langgraph/.venv/lib/python3.13/site-packages/langchain_core/messages/__init__.py)",
+          "traceback": [
+            "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+            "\u001b[31mImportError\u001b[39m                               Traceback (most recent call last)",
+            "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[170]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mlangchain_core\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mmessages\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m MumanMessage\n\u001b[32m      3\u001b[39m graph.update_state(\n\u001b[32m      4\u001b[39m     to_fork.config,\n\u001b[32m      5\u001b[39m     {\n\u001b[32m   (...)\u001b[39m\u001b[32m     12\u001b[39m     }\n\u001b[32m     13\u001b[39m )\n",
+            "\u001b[31mImportError\u001b[39m: cannot import name 'MumanMessage' from 'langchain_core.messages' (/Users/askstoryteam/Documents/Obsidian Vault/Project/AI Agent/course/hello-langgraph/.venv/lib/python3.13/site-packages/langchain_core/messages/__init__.py)"
+          ]
+        }
+      ],
+      "id": "b759540e"
     },
     {
       "cell_type": "code",
-      "execution_count": null,
-      "id": "1af07137",
       "metadata": {},
-      "outputs": [],
-      "source": [
-        "snapshot = graph.get_state(config)\n",
-        "snapshot.next"
-      ]
-    },
-    {
-      "cell_type": "code",
+      "source": [],
       "execution_count": null,
-      "id": "e280d851",
-      "metadata": {},
       "outputs": [],
-      "source": []
+      "id": "65adc590"
     }
   ],
   "metadata": {
